--- a/index.css
+++ b/index.css
@@ -21,58 +21,72 @@ html, body{
 	padding:0;
 	display:block;
 }
+#login{
+	float:right;
+}
 
 @media screen and (max-width: 600px){ /*i'm pretty sure that this doesn't work*/
 	#navbar ul, #navbar li, #navbar a {float:none;}
+}
+#navbar{
+	margin-top:10px;
 }
 #navbar ul{
 	list-style-type:none;
 	margin:0;
 	padding:0;
+	display:inline-block;
 	width:100%;
-	float:left;
 	position: -webkit-sticky; /*Safari*/
 	position:sticky;
-	top:0;
 	background-color:#aaaaaa;
 }
-#navbar li{
+#navbar ul li{
+	min-width:100px;
+	position:relative;
 	float:left;
+	margin:0;
+	padding:0;
 }
-#navbar a{
-	min-width:80px;
+#navbar ul a{
 	display:block;
 	padding:8px;
 	color:white;
 	text-decoration:none;
+	background-color:none;
 }
-#navbar a:hover{
+#navbar ul li:hover{
 	background-color: #111;
 }
-.active{
+#navbar ul ul{
+	display:none;
+	position:absolute;
+	top:100%;
+	left:0;
+	background:#999;
+	padding:0;
+}
+#navbar ul ul li{
+	float:none;
+	width:100px;
+}
+#navbar ul ul a{
+	line-height:120%;
+	padding:10px 15px;
+}
+#navbar ul ul ul{
+	top:0;
+	left:100%;
+}
+#navbar ul li:hover > ul{
+	display:block;
+}
+.current-page{
 	background-color:#222;
 }
-li.dropdown{
-	display:inline-block;
+
+
+body{
+	text-align:center;
 }
-.dropdown-content{
-	display:none;
-	position:aboslute;
-	background-color:#999999;
-	/*min-width:100px;*/
-	box-shadow:0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index:1;
-}
-.dropdown-content a{
-	color:black;
-	padding:12px 16px;
-	text-decoration:none;
-	display:block;
-	text-align:left;
-}
-.dropdown-content a:hover{
-	background-color:#CCCCCC;
-}
-.dropdown:hover .dropdown-content{
-	display:block;
-}
+	
