Payment and confirmation page

--- a/index.css
+++ b/index.css
@@ -124,8 +124,7 @@ html, body{
 	width:200px;
 }
 
-
-/* From style.css */
+/* From style.css - checkout and payment pages */
 
 #shopping-cart {
 	margin: 40px;
